--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -9,8 +9,10 @@ library(tidyverse)
 
 This document will show how to import data. 
 
+The clean_names function in janitor package cleans the name of the variables to lower case and replaces space with dash.
 ```{r}
 litters_df = read_csv("data/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
 ```
 
 ## Look at data set
@@ -21,10 +23,67 @@ head(litters_df)
 tail(litters_df)
 ```
 
+The view() function will open the entire data frame in a new window.
+eval = FALSE so the data set doesn't show up in the knitted document.
+
 ```{r eval = FALSE}
 #view will open the entire data frame in a new window 
 #eval = FALSE so the data set doesn't show up in the knitted document
 view(litters_df)
 
 ```
+
+## Learning Assessment
+Importing the FAS_pups dataset. 
+
+Use relative path 
+```{r}
+pups_df = read_csv("./data/FAS_pups.csv")
+pups_df = janitor::clean_names(pups_df)
+```
+
+Use absolute path 
+```{r absolute_path}
+#pups_df = read_csv("/Users/claudiahuynh/Desktop/BIST8105/data_wrangling_i/data")
+
+```
+
+## Look at read_csv options 
+
+col_names = FALSE function generates column names as X1, X2, X3
+skip = 1 skips the first row which was the original col names 
+```{r}
+litters_df = 
+  read_csv(
+    file = "data/FAS_litters.csv",
+    col_names = FALSE,
+    skip = 1
+  )
+```
+
+What about missing data?
+Use the na = c() function to treat missing data presented in the forms of Na, space or . as NA.
+
+```{r}
+litters_df = 
+  read_csv(
+    file = "data/FAS_litters.csv",
+    na = c("NA", "", "."),
+  )
+
+```
+
+What if we code "group" as a factor variable?
+Factor variables are useful when we know that the column has different levels. This section does column parsing using the col_types = col() function.  
+
+```{r}
+litters_df = 
+    read_csv(
+      file = "data/FAS_litters.csv",
+      col_types = cols(
+        Group = col_factor()
+      )
+    )
+```
+
 
