Import excel and csv data.

--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r setup, echo = FALSE, message = FALSE}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 This document will show how to import data. 
@@ -86,4 +88,19 @@ litters_df =
     )
 ```
 
+## Import an excel file 
+
+Import MLB 2011 summary data. Load the library readxl first
+
+The sheet = "" function allows you to specify which sheets to import/read. The range = function specifies the cell range like B1:C12 to import/read.
+```{r}
+mlb_df = read_excel("data/mlb11.xlsx", sheet = "mlb11")
+```
+
+## Import SAS data
+
+Import SAS data. Load the library haven first 
+```{r}
+pulse_df = read_sas("data/public_pulse_data.sas7bdat")
+```
 
