--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -69,7 +69,54 @@ select(pups_df, litter_number, sex, pd_ears)
 ```
 
 ## `filter`
+You can filter values using ==
+```{r}
+filter(litters_df, gd_of_birth == 20)
+filter(litters_df, gd_of_birth == 19)
+```
 
+```{r}
+filter(litters_df, gd_of_birth == 20)
+filter(litters_df, gd_of_birth == 19)
+```
+
+You can also do inequalities 
+
+```{r}
+filter(litters_df, pups_born_alive >8)
+filter(litters_df, pups_born_alive >=8)
+```
+
+You can also do not equal to using !=
+
+```{r}
+filter(litters_df, pups_born_alive !=9)
+
+```
+
+You can also filter character columns. Filter multiple with %in%
+```{r}
+filter(litters_df, group == "Low8")
+filter(litters_df, group %in% c("Low7", "Low8"))
+```
+
+You can also filter multiple rows
+```{r}
+filter(litters_df, group %in% c("Low7", "Low8"), pups_born_alive ==8)
+```
+
+You can also get rid of missing values 
+```{r}
+drop_na(litters_df)
+
+drop_na(litters_df, gd0_weight)
+```
+
+Learning assessment 2
+```{r la2}
+filter(pups_df, sex == 1)
+filter(pups_df, pd_walk <11, sex == 2)
+```
 ## `mutate`
 
 ## `arrange`
