--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -118,7 +118,31 @@ filter(pups_df, sex == 1)
 filter(pups_df, pd_walk <11, sex == 2)
 ```
 ## `mutate`
+```{r}
+mutate(litters_df, wt_gain = gd18_weight - gd0_weight)
+
+mutate(litters_df, sq_pups = pups_born_alive^2)
+
+mutate(litters_df, group = str_to_lower(group))
+```
+
+```{r}
+mutate(
+  litters_df,
+  wt_gain = gd18_weight - gd0_weight,
+  group = str_to_lower(group)
+)
+```
 
 ## `arrange`
+Reorder the rows to ascending or descending order. You can also arrange multiple rows. For example, arrange pups_born_alive first then gd0 weight. 
 
-## `PIPING`
+```{r}
+arrange(litters_df, gd0_weight)
+
+arrange(litters_df, desc(gd0_weight))
+
+arrange(litters_df, pups_born_alive, gd0_weight)
+```
+
+## `PIPING`!!!!
