--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -10,6 +10,7 @@ Importing the two datasets pups and litters that we're going to manipulate.
 ```{r setup, echo = FALSE, message = FALSE}
 library(tidyverse)
 
+
 ```
 
 ```{r}
@@ -146,3 +147,38 @@ arrange(litters_df, pups_born_alive, gd0_weight)
 ```
 
 ## `PIPING`!!!!
+
+```{r}
+litters_df = 
+  read_csv ("data/FAS_litters.csv", na = c("", "NA", ".")) |> 
+  janitor::clean_names() |> 
+  select(-pups_born_alive) |> 
+  filter(group == "Con7") |> 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight
+  )
+ 
+```
+
+```{r}
+litters_df = 
+  read_csv("data/FAS_litters.csv", na = c(".", "", "NA" )) |> 
+  janitor::clean_names() |>
+  mutate(wt_gain = gd18_weight - gd0_weight) |> 
+  lm(wt_gain ~ pups_born_alive, data = _)
+  
+```
+
+```{r}
+litters_df = 
+  read_csv ("data/FAS_litters.csv", na = c("", "NA", ".")) |> 
+  janitor::clean_names() |> 
+  select(-pups_born_alive) |> 
+  filter(group == "Con7") |> 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight
+  )
+
+write_csv(litters_df, "data/cleaned_fas_litters.csv")
+ 
+```
